[package]
name = "totpgen"
version = "0.1.0"
authors = ["Klaas-Jan Boon <klaas-janboon@live.nl>"]
edition = "2018"
keywords = [ "totp" ]
categores = [ "command-line-utilities", "authentication" ]

[dependencies]
sha-1 = "0.9.1"
hmac = "0.10.1"
confy = "0.4.0"
serde = { version = "1.0.117", features = ["derive"] }
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
strfmt = "0.1.6"
