[package]
name = "totpgen"
description = "totpgen is a tool for managing and generating TOTP tokens on the command line quickly."
license = "MIT OR Apache-2.0"
version = "0.1.2"
authors = ["Klaas-Jan Boon <klaas-janboon@live.nl>"]
edition = "2018"
keywords = [ "totp" ]
categores = [ "command-line-utilities", "authentication" ]
repository = "https://github.com/K-JBoon/totpgen"

[dependencies]
sha-1 = "0.9.1"
hmac = "0.10.1"
confy = "0.4.0"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.33"
strfmt = "0.1.6"
clap = { version = "4.3.8", features = ["derive"] }
